--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="farshid_roohi.ir.plainolnote.farshid_roohi.ir.note.activitis.MainActivity" />
+                android:value="farshid_roohi.ir.note.activitis.MainActivity" />
         </activity>
     </application>
 
